# Projekt_ASI

./: README.md
gss-wage-analysis/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
gss-wage-analysis/conf/base/: catalog.yml  parameters_data_science.yml
gss-wage-analysis/src/gss_wage_analysis/: __init__.py  __main__.py  pipeline_registry.py  settings.py
gss-wage-analysis/src/gss_wage_analysis/pipelines/data_modelling/: __init__.py  nodes.py  pipeline.py
gss-wage-analysis/src/gss_wage_analysis/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
gss-wage-analysis/src/gss_wage_analysis/pipelines/data_split/: __init__.py  nodes.py  pipeline.py
gss-wage-analysis/src/gss_wage_analysis/pipelines/model_upload/: __init__.py  nodes.py  pipeline.py
gss-wage-analysis/tests/pipelines/data_science/: test_pipeline.py
pythonProjectStreamlit/: Dockerfile  app.py  main.py  requirements.txt
